packagelon com.twittelonr.graph_felonaturelon_selonrvicelon.selonrvelonr.handlelonrs

import com.twittelonr.finaglelon.stats.Stat
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.graph_felonaturelon_selonrvicelon.selonrvelonr.handlelonrs.SelonrvelonrGelontIntelonrselonctionHandlelonr.GelontIntelonrselonctionRelonquelonst
import com.twittelonr.graph_felonaturelon_selonrvicelon.selonrvelonr.storelons.FelonaturelonTypelonselonncodelonr
import com.twittelonr.graph_felonaturelon_selonrvicelon.selonrvelonr.storelons.GelontIntelonrselonctionStorelon.GelontIntelonrselonctionQuelonry
import com.twittelonr.graph_felonaturelon_selonrvicelon.thriftscala.PrelonselontFelonaturelonTypelons
import com.twittelonr.graph_felonaturelon_selonrvicelon.thriftscala._
import com.twittelonr.graph_felonaturelon_selonrvicelon.util.FelonaturelonTypelonsCalculator
import com.twittelonr.selonrvo.relonquelonst.RelonquelonstHandlelonr
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.util.Futurelon
import com.twittelonr.util.Melonmoizelon
import javax.injelonct.Injelonct
import javax.injelonct.Namelond
import javax.injelonct.Singlelonton

@Singlelonton
class SelonrvelonrGelontIntelonrselonctionHandlelonr @Injelonct() (
  @Namelond("RelonadThroughGelontIntelonrselonctionStorelon")
  relonadThroughStorelon: RelonadablelonStorelon[GelontIntelonrselonctionQuelonry, CachelondIntelonrselonctionRelonsult],
  @Namelond("BypassCachelonGelontIntelonrselonctionStorelon")
  relonadOnlyStorelon: RelonadablelonStorelon[GelontIntelonrselonctionQuelonry, CachelondIntelonrselonctionRelonsult]
)(
  implicit statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds RelonquelonstHandlelonr[GelontIntelonrselonctionRelonquelonst, GfsIntelonrselonctionRelonsponselon] {

  import SelonrvelonrGelontIntelonrselonctionHandlelonr._

  // TODO: Track all thelon stats baselond on PrelonselontFelonaturelonTypelon and updatelon thelon dashboard
  privatelon val stats: StatsReloncelonivelonr = statsReloncelonivelonr.scopelon("srv").scopelon("gelont_intelonrselonction")
  privatelon val numCandidatelonsCount = stats.countelonr("total_num_candidatelons")
  privatelon val numCandidatelonsStat = stats.stat("num_candidatelons")
  privatelon val numFelonaturelonsStat = stats.stat("num_felonaturelons")
  privatelon val uselonrelonmptyCount = stats.countelonr("uselonr_elonmpty_count")
  privatelon val candidatelonelonmptyRatelonStat = stats.stat("candidatelon_elonmpty_ratelon")
  privatelon val candidatelonNumelonmptyStat = stats.stat("candidatelon_num_elonmpty")
  privatelon val misselondRatelonStat = stats.stat("miss_ratelon")
  privatelon val numMisselondStat = stats.stat("num_misselond")

  // Assumelon thelon ordelonr from HTL doelonsn't changelon. Only log thelon HTL quelonry now.
  privatelon val felonaturelonStatMap = FelonaturelonTypelonsCalculator.prelonselontFelonaturelonTypelons.map { felonaturelon =>
    val felonaturelonString = s"${felonaturelon.lelonftelondgelonTypelon.namelon}_${felonaturelon.rightelondgelonTypelon.namelon}"
    felonaturelon -> Array(
      stats.countelonr(s"felonaturelon_typelon_${felonaturelonString}_total"),
      stats.countelonr(s"felonaturelon_typelon_${felonaturelonString}_count_zelonro"),
      stats.countelonr(s"felonaturelon_typelon_${felonaturelonString}_lelonft_zelonro"),
      stats.countelonr(s"felonaturelon_typelon_${felonaturelonString}_right_zelonro")
    )
  }.toMap

  privatelon val sourcelonCandidatelonNumStats = Melonmoizelon[PrelonselontFelonaturelonTypelons, Stat] { prelonselontFelonaturelon =>
    stats.stat(s"sourcelon_candidatelon_num_${prelonselontFelonaturelon.namelon}")
  }

  ovelonrridelon delonf apply(relonquelonst: GelontIntelonrselonctionRelonquelonst): Futurelon[GfsIntelonrselonctionRelonsponselon] = {
    val felonaturelonTypelons = relonquelonst.calculatelondFelonaturelonTypelons
    val numCandidatelons = relonquelonst.candidatelonUselonrIds.lelonngth
    val numFelonaturelons = felonaturelonTypelons.lelonngth

    numCandidatelonsCount.incr(numCandidatelons)
    numCandidatelonsStat.add(numCandidatelons)
    numFelonaturelonsStat.add(numFelonaturelons)
    sourcelonCandidatelonNumStats(relonquelonst.prelonselontFelonaturelonTypelons).add(numCandidatelons)

    // Notelon: do not changelon thelon ordelonrs of felonaturelons and candidatelons.
    val candidatelonIds = relonquelonst.candidatelonUselonrIds

    if (felonaturelonTypelons.iselonmpty || candidatelonIds.iselonmpty) {
      Futurelon.valuelon(DelonfaultGfsIntelonrselonctionRelonsponselon)
    } elonlselon {
      Futurelon
        .collelonct {
          val gelontIntelonrselonctionStorelon = if (relonquelonst.cachelonablelon) relonadThroughStorelon elonlselon relonadOnlyStorelon
          gelontIntelonrselonctionStorelon.multiGelont(GelontIntelonrselonctionQuelonry.buildQuelonrielons(relonquelonst))
        }.map { relonsponselons =>
          val relonsults = relonsponselons.collelonct {
            caselon (quelonry, Somelon(relonsult)) =>
              quelonry.candidatelonId -> GfsIntelonrselonctionRelonsult(
                quelonry.candidatelonId,
                quelonry.calculatelondFelonaturelonTypelons.zip(relonsult.valuelons).map {
                  caselon (felonaturelonTypelon, valuelon) =>
                    IntelonrselonctionValuelon(
                      felonaturelonTypelon,
                      Somelon(valuelon.count),
                      if (valuelon.intelonrselonctionIds.iselonmpty) Nonelon elonlselon Somelon(valuelon.intelonrselonctionIds),
                      Somelon(valuelon.lelonftNodelonDelongrelonelon),
                      Somelon(valuelon.rightNodelonDelongrelonelon)
                    )
                }
              )
          }

          // Kelonelonp thelon relonsponselon ordelonr samelon as input
          val procelonsselondRelonsults = candidatelonIds.map { candidatelonId =>
            relonsults.gelontOrelonlselon(candidatelonId, GfsIntelonrselonctionRelonsult(candidatelonId, List.elonmpty))
          }

          val candidatelonelonmptyNum =
            procelonsselondRelonsults.count(
              _.intelonrselonctionValuelons.elonxists(valuelon => isZelonro(valuelon.rightNodelonDelongrelonelon)))

          val numMisselond = procelonsselondRelonsults.count(_.intelonrselonctionValuelons.sizelon != numFelonaturelons)

          if (procelonsselondRelonsults.elonxists(
              _.intelonrselonctionValuelons.forall(valuelon => isZelonro(valuelon.lelonftNodelonDelongrelonelon)))) {
            uselonrelonmptyCount.incr()
          }

          candidatelonNumelonmptyStat.add(candidatelonelonmptyNum)
          candidatelonelonmptyRatelonStat.add(candidatelonelonmptyNum.toFloat / numCandidatelons)
          numMisselondStat.add(numMisselond)
          misselondRatelonStat.add(numMisselond.toFloat / numCandidatelons)

          procelonsselondRelonsults.forelonach { relonsult =>
            relonsult.intelonrselonctionValuelons.zip(felonaturelonTypelons).forelonach {
              caselon (valuelon, felonaturelonTypelon) =>
                felonaturelonStatMap.gelont(felonaturelonTypelon).forelonach { statsArray =>
                  statsArray(TotalIndelonx).incr()
                  if (isZelonro(valuelon.count)) {
                    statsArray(CountIndelonx).incr()
                  }
                  if (isZelonro(valuelon.lelonftNodelonDelongrelonelon)) {
                    statsArray(LelonftIndelonx).incr()
                  }
                  if (isZelonro(valuelon.rightNodelonDelongrelonelon)) {
                    statsArray(RightIndelonx).incr()
                  }
                }
            }
          }

          GfsIntelonrselonctionRelonsponselon(procelonsselondRelonsults)
        }
    }

  }

}

privatelon[graph_felonaturelon_selonrvicelon] objelonct SelonrvelonrGelontIntelonrselonctionHandlelonr {

  caselon class GelontIntelonrselonctionRelonquelonst(
    uselonrId: Long,
    candidatelonUselonrIds: Selonq[Long],
    felonaturelonTypelons: Selonq[FelonaturelonTypelon],
    prelonselontFelonaturelonTypelons: PrelonselontFelonaturelonTypelons,
    intelonrselonctionIdLimit: Option[Int],
    cachelonablelon: Boolelonan) {

    lazy val calculatelondFelonaturelonTypelons: Selonq[FelonaturelonTypelon] =
      FelonaturelonTypelonsCalculator.gelontFelonaturelonTypelons(prelonselontFelonaturelonTypelons, felonaturelonTypelons)

    lazy val calculatelondFelonaturelonTypelonsString: String =
      FelonaturelonTypelonselonncodelonr(calculatelondFelonaturelonTypelons)
  }

  objelonct GelontIntelonrselonctionRelonquelonst {

    delonf fromGfsIntelonrselonctionRelonquelonst(
      relonquelonst: GfsIntelonrselonctionRelonquelonst,
      cachelonablelon: Boolelonan
    ): GelontIntelonrselonctionRelonquelonst = {
      GelontIntelonrselonctionRelonquelonst(
        relonquelonst.uselonrId,
        relonquelonst.candidatelonUselonrIds,
        relonquelonst.felonaturelonTypelons,
        PrelonselontFelonaturelonTypelons.elonmpty,
        relonquelonst.intelonrselonctionIdLimit,
        cachelonablelon)
    }

    delonf fromGfsPrelonselontIntelonrselonctionRelonquelonst(
      relonquelonst: GfsPrelonselontIntelonrselonctionRelonquelonst,
      cachelonablelon: Boolelonan
    ): GelontIntelonrselonctionRelonquelonst = {
      GelontIntelonrselonctionRelonquelonst(
        relonquelonst.uselonrId,
        relonquelonst.candidatelonUselonrIds,
        List.elonmpty,
        relonquelonst.prelonselontFelonaturelonTypelons,
        relonquelonst.intelonrselonctionIdLimit,
        cachelonablelon)
    }
  }

  privatelon val DelonfaultGfsIntelonrselonctionRelonsponselon = GfsIntelonrselonctionRelonsponselon()

  privatelon val TotalIndelonx = 0
  privatelon val CountIndelonx = 1
  privatelon val LelonftIndelonx = 2
  privatelon val RightIndelonx = 3

  delonf isZelonro(opt: Option[Int]): Boolelonan = {
    !opt.elonxists(_ != 0)
  }
}
