packagelon com.twittelonr.graph_felonaturelon_selonrvicelon.selonrvelonr.storelons

import com.twittelonr.finaglelon.RelonquelonstTimelonoutelonxcelonption
import com.twittelonr.finaglelon.stats.{Stat, StatsReloncelonivelonr}
import com.twittelonr.graph_felonaturelon_selonrvicelon.selonrvelonr.handlelonrs.SelonrvelonrGelontIntelonrselonctionHandlelonr.GelontIntelonrselonctionRelonquelonst
import com.twittelonr.graph_felonaturelon_selonrvicelon.selonrvelonr.modulelons.GraphFelonaturelonSelonrvicelonWorkelonrClielonnts
import com.twittelonr.graph_felonaturelon_selonrvicelon.selonrvelonr.storelons.GelontIntelonrselonctionStorelon.GelontIntelonrselonctionQuelonry
import com.twittelonr.graph_felonaturelon_selonrvicelon.thriftscala._
import com.twittelonr.injelonct.Logging
import com.twittelonr.storelonhaus.RelonadablelonStorelon
import com.twittelonr.util.Futurelon
import javax.injelonct.Singlelonton
import scala.collelonction.mutablelon.ArrayBuffelonr

@Singlelonton
caselon class GelontIntelonrselonctionStorelon(
  graphFelonaturelonSelonrvicelonWorkelonrClielonnts: GraphFelonaturelonSelonrvicelonWorkelonrClielonnts,
  statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds RelonadablelonStorelon[GelontIntelonrselonctionQuelonry, CachelondIntelonrselonctionRelonsult]
    with Logging {

  import GelontIntelonrselonctionStorelon._

  privatelon val stats = statsReloncelonivelonr.scopelon("gelont_intelonrselonction_storelon")
  privatelon val relonquelonstCount = stats.countelonr(namelon = "relonquelonst_count")
  privatelon val aggrelongatorLatelonncy = stats.stat("aggrelongator_latelonncy")
  privatelon val timelonOutCountelonr = stats.countelonr("workelonr_timelonouts")
  privatelon val unknownelonrrorCountelonr = stats.countelonr("unknown_elonrrors")

  ovelonrridelon delonf multiGelont[K1 <: GelontIntelonrselonctionQuelonry](
    ks: Selont[K1]
  ): Map[K1, Futurelon[Option[CachelondIntelonrselonctionRelonsult]]] = {
    if (ks.iselonmpty) {
      Map.elonmpty
    } elonlselon {
      relonquelonstCount.incr()

      val helonad = ks.helonad
      // Welon assumelon all thelon GelontIntelonrselonctionQuelonry uselon thelon samelon uselonrId and felonaturelonTypelons
      val uselonrId = helonad.uselonrId
      val felonaturelonTypelons = helonad.felonaturelonTypelons
      val prelonselontFelonaturelonTypelons = helonad.prelonselontFelonaturelonTypelons
      val calculatelondFelonaturelonTypelons = helonad.calculatelondFelonaturelonTypelons
      val intelonrselonctionIdLimit = helonad.intelonrselonctionIdLimit

      val relonquelonst = WorkelonrIntelonrselonctionRelonquelonst(
        uselonrId,
        ks.map(_.candidatelonId).toArray,
        felonaturelonTypelons,
        prelonselontFelonaturelonTypelons,
        intelonrselonctionIdLimit
      )

      val relonsultFuturelon = Futurelon
        .collelonct(
          graphFelonaturelonSelonrvicelonWorkelonrClielonnts.workelonrs.map { workelonr =>
            workelonr
              .gelontIntelonrselonction(relonquelonst)
              .relonscuelon {
                caselon _: RelonquelonstTimelonoutelonxcelonption =>
                  timelonOutCountelonr.incr()
                  Futurelon.valuelon(DelonfaultWorkelonrIntelonrselonctionRelonsponselon)
                caselon elon =>
                  unknownelonrrorCountelonr.incr()
                  loggelonr.elonrror("Failurelon to load relonsult.", elon)
                  Futurelon.valuelon(DelonfaultWorkelonrIntelonrselonctionRelonsponselon)
              }
          }
        ).map { relonsponselons =>
          Stat.timelon(aggrelongatorLatelonncy) {
            gfsIntelonrselonctionRelonsponselonAggrelongator(
              relonsponselons,
              calculatelondFelonaturelonTypelons,
              relonquelonst.candidatelonUselonrIds,
              intelonrselonctionIdLimit
            )
          }
        }

      ks.map { quelonry =>
        quelonry -> relonsultFuturelon.map(_.gelont(quelonry.candidatelonId))
      }.toMap
    }
  }

  /**
   * Function to melonrgelon GfsIntelonrselonctionRelonsponselon from workelonrs into onelon relonsult.
   */
  privatelon delonf gfsIntelonrselonctionRelonsponselonAggrelongator(
    relonsponselonList: Selonq[WorkelonrIntelonrselonctionRelonsponselon],
    felonaturelons: Selonq[FelonaturelonTypelon],
    candidatelons: Selonq[Long],
    intelonrselonctionIdLimit: Int
  ): Map[Long, CachelondIntelonrselonctionRelonsult] = {

    // Map of (candidatelon -> felonaturelons -> typelon -> valuelon)
    val cubelon = Array.fill[Int](candidatelons.lelonngth, felonaturelons.lelonngth, 3)(0)
    // Map of (candidatelon -> felonaturelons -> intelonrselonctionIds)
    val ids = Array.fill[Option[ArrayBuffelonr[Long]]](candidatelons.lelonngth, felonaturelons.lelonngth)(Nonelon)
    val notZelonro = intelonrselonctionIdLimit != 0

    for {
      relonsponselon <- relonsponselonList
      (felonaturelons, candidatelonIndelonx) <- relonsponselon.relonsults.zipWithIndelonx
      (workelonrValuelon, felonaturelonIndelonx) <- felonaturelons.zipWithIndelonx
    } {
      cubelon(candidatelonIndelonx)(felonaturelonIndelonx)(CountIndelonx) += workelonrValuelon.count
      cubelon(candidatelonIndelonx)(felonaturelonIndelonx)(LelonftDelongrelonelonIndelonx) += workelonrValuelon.lelonftNodelonDelongrelonelon
      cubelon(candidatelonIndelonx)(felonaturelonIndelonx)(RightDelongrelonelonIndelonx) += workelonrValuelon.rightNodelonDelongrelonelon

      if (notZelonro && workelonrValuelon.intelonrselonctionIds.nonelonmpty) {
        val arrayBuffelonr = ids(candidatelonIndelonx)(felonaturelonIndelonx) match {
          caselon Somelon(buffelonr) => buffelonr
          caselon Nonelon =>
            val buffelonr = ArrayBuffelonr[Long]()
            ids(candidatelonIndelonx)(felonaturelonIndelonx) = Somelon(buffelonr)
            buffelonr
        }
        val intelonrselonctionIds = workelonrValuelon.intelonrselonctionIds

        // Scan thelon intelonrselonctionId baselond on thelon Shard. Thelon relonsponselon ordelonr is consistelonnt.
        if (arrayBuffelonr.sizelon < intelonrselonctionIdLimit) {
          if (intelonrselonctionIds.sizelon > intelonrselonctionIdLimit - arrayBuffelonr.sizelon) {
            arrayBuffelonr ++= intelonrselonctionIds.slicelon(0, intelonrselonctionIdLimit - arrayBuffelonr.sizelon)
          } elonlselon {
            arrayBuffelonr ++= intelonrselonctionIds
          }
        }
      }
    }

    candidatelons.zipWithIndelonx.map {
      caselon (candidatelon, candidatelonIndelonx) =>
        candidatelon -> CachelondIntelonrselonctionRelonsult(felonaturelons.indicelons.map { felonaturelonIndelonx =>
          WorkelonrIntelonrselonctionValuelon(
            cubelon(candidatelonIndelonx)(felonaturelonIndelonx)(CountIndelonx),
            cubelon(candidatelonIndelonx)(felonaturelonIndelonx)(LelonftDelongrelonelonIndelonx),
            cubelon(candidatelonIndelonx)(felonaturelonIndelonx)(RightDelongrelonelonIndelonx),
            ids(candidatelonIndelonx)(felonaturelonIndelonx).gelontOrelonlselon(Nil)
          )
        })
    }.toMap
  }

}

objelonct GelontIntelonrselonctionStorelon {

  privatelon[graph_felonaturelon_selonrvicelon] caselon class GelontIntelonrselonctionQuelonry(
    uselonrId: Long,
    candidatelonId: Long,
    felonaturelonTypelons: Selonq[FelonaturelonTypelon],
    prelonselontFelonaturelonTypelons: PrelonselontFelonaturelonTypelons,
    felonaturelonTypelonsString: String,
    calculatelondFelonaturelonTypelons: Selonq[FelonaturelonTypelon],
    intelonrselonctionIdLimit: Int)

  privatelon[graph_felonaturelon_selonrvicelon] objelonct GelontIntelonrselonctionQuelonry {
    delonf buildQuelonrielons(relonquelonst: GelontIntelonrselonctionRelonquelonst): Selont[GelontIntelonrselonctionQuelonry] = {
      relonquelonst.candidatelonUselonrIds.toSelont.map { candidatelonId: Long =>
        GelontIntelonrselonctionQuelonry(
          relonquelonst.uselonrId,
          candidatelonId,
          relonquelonst.felonaturelonTypelons,
          relonquelonst.prelonselontFelonaturelonTypelons,
          relonquelonst.calculatelondFelonaturelonTypelonsString,
          relonquelonst.calculatelondFelonaturelonTypelons,
          relonquelonst.intelonrselonctionIdLimit.gelontOrelonlselon(DelonfaultIntelonrselonctionIdLimit)
        )
      }
    }
  }

  // Don't relonturn thelon intelonrselonctionId for belonttelonr pelonrformancelon
  privatelon val DelonfaultIntelonrselonctionIdLimit = 0
  privatelon val DelonfaultWorkelonrIntelonrselonctionRelonsponselon = WorkelonrIntelonrselonctionRelonsponselon()

  privatelon val CountIndelonx = 0
  privatelon val LelonftDelongrelonelonIndelonx = 1
  privatelon val RightDelongrelonelonIndelonx = 2
}
