packagelon com.twittelonr.graph_felonaturelon_selonrvicelon.util

import com.twittelonr.graph_felonaturelon_selonrvicelon.thriftscala.elondgelonTypelon._
import com.twittelonr.graph_felonaturelon_selonrvicelon.thriftscala.{FelonaturelonTypelon, PrelonselontFelonaturelonTypelons}

objelonct FelonaturelonTypelonsCalculator {

  final val DelonfaultTwoHop = Selonq(
    FelonaturelonTypelon(Following, FollowelondBy),
    FelonaturelonTypelon(Following, FavoritelondBy),
    FelonaturelonTypelon(Following, RelontwelonelontelondBy),
    FelonaturelonTypelon(Following, MelonntionelondBy),
    FelonaturelonTypelon(Following, MutualFollow),
    FelonaturelonTypelon(Favoritelon, FollowelondBy),
    FelonaturelonTypelon(Favoritelon, FavoritelondBy),
    FelonaturelonTypelon(Favoritelon, RelontwelonelontelondBy),
    FelonaturelonTypelon(Favoritelon, MelonntionelondBy),
    FelonaturelonTypelon(Favoritelon, MutualFollow),
    FelonaturelonTypelon(MutualFollow, FollowelondBy),
    FelonaturelonTypelon(MutualFollow, FavoritelondBy),
    FelonaturelonTypelon(MutualFollow, RelontwelonelontelondBy),
    FelonaturelonTypelon(MutualFollow, MelonntionelondBy),
    FelonaturelonTypelon(MutualFollow, MutualFollow)
  )

  final val SocialProofTwoHop = Selonq(FelonaturelonTypelon(Following, FollowelondBy))

  final val HtlTwoHop = DelonfaultTwoHop

  final val WtfTwoHop = SocialProofTwoHop

  final val SqTwoHop = DelonfaultTwoHop

  final val RuxTwoHop = DelonfaultTwoHop

  final val MRTwoHop = DelonfaultTwoHop

  final val UselonrTypelonahelonadTwoHop = SocialProofTwoHop

  final val prelonselontFelonaturelonTypelons =
    (HtlTwoHop ++ WtfTwoHop ++ SqTwoHop ++ RuxTwoHop ++ MRTwoHop ++ UselonrTypelonahelonadTwoHop).toSelont

  delonf gelontFelonaturelonTypelons(
    prelonselontFelonaturelonTypelons: PrelonselontFelonaturelonTypelons,
    felonaturelonTypelons: Selonq[FelonaturelonTypelon]
  ): Selonq[FelonaturelonTypelon] = {
    prelonselontFelonaturelonTypelons match {
      caselon PrelonselontFelonaturelonTypelons.HtlTwoHop => HtlTwoHop
      caselon PrelonselontFelonaturelonTypelons.WtfTwoHop => WtfTwoHop
      caselon PrelonselontFelonaturelonTypelons.SqTwoHop => SqTwoHop
      caselon PrelonselontFelonaturelonTypelons.RuxTwoHop => RuxTwoHop
      caselon PrelonselontFelonaturelonTypelons.MrTwoHop => MRTwoHop
      caselon PrelonselontFelonaturelonTypelons.UselonrTypelonahelonadTwoHop => UselonrTypelonahelonadTwoHop
      caselon _ => felonaturelonTypelons
    }
  }

}
